# inscore-sellers-api

./: Dockerfile  Makefile  buildspec.yaml  buildspec.yml  local.env  pyproject.toml  t.py
sellers_api/: manage.py
sellers_api/connector/: models.py  serializers.py  urls.py  views.py
sellers_api/connector/migrations/: 0001_initial.py
sellers_api/contacts/: actions.py  handler.py  models.py  serializers.py  urls.py  validators.py  views.py
sellers_api/contacts/migrations/: 0001_initial.py  0002_sellergroupsmodel_contacts_group.py  0003_sellergroupsmodel_description_and_more.py
sellers_api/seller/: models.py  serializers.py  signals.py  urls.py  validators.py  views.py
sellers_api/seller/migrations/: 0001_initial.py  0002_userauthmodel_sellermodel_city_and_more.py  0003_usermodel_name.py  0004_alter_sellermodel_cnpj_alter_sellermodel_name.py  0005_alter_sellermodel_created_at.py  0006_remove_sellermodel_plan_id_sellermodel_plan.py
sellers_api/sellers_api/: asgi.py  settings.py  urls.py  wsgi.py
